<resources>
    <string name="app_name">TSF BankApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_transactions">Transactions</string>
    <string name="_9999_444_9999"> 2117090659 </string>
    <string name="account_number">Account Number: </string>
    <string name="customers_name">Ighedosa Favour</string>
    <string name="mobile_number">09075112158</string>
    <string name="transfer_money">Transfer money</string>
    <string name="balance_text">Account Balance:</string>
    <string name="kolawole_matthew">Kolawole Matthew</string>
    <string name="email">kolamatthew@gmail.com</string>
    <string name="swift_code">2395449875224</string>
    <string name="balance_available">200000.00</string>
    <string name="card_number">3456 3456 9786 8578</string>
    <string name="card_number_text">Card Number:</string>
    <string name="phone_number_text">Phone Number:</string>
    <string name="sort_code_text">Sort Code:</string>
    <string name="transferred_amount">Amount Transferred: </string>
    <string name="name">Name:</string>
    <string name="transaction_successful">Transaction Successful!</string>
    <string name="sender_info">Sender Details</string>
    <string name="receiver_info">Receiver Details</string>
    <string name="select_customer">Select Customer To Send Funds</string>
    <string name="bank_name">UBA</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="status">Status</string>
    <string name="amount">Amount</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="enter_transfer_amount">Enter Transfer Amount</string>
</resources>