<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            tools:context=".fragments.DetailsFragment">

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_pic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="20dp"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="50dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/details_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/customers_name"
                    android:scaleType="centerCrop"
                    android:background="@color/white"
                    android:src="@drawable/person_image" />

            </androidx.cardview.widget.CardView>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/details_customer_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/kolawole_matthew"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/deep_gold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_pic" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/details_email_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/email"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/details_customer_name_text_view" />

            <LinearLayout
                android:id="@+id/account_balance_linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/details_email_text_view">

                <TextView
                    android:id="@+id/balancetxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/balance_text"
                    android:fontFamily="@font/open_sans_regular"
                    android:textColor="@color/deep_gold"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/details_email_text_view" />

                <TextView
                    android:id="@+id/details_account_balance_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_email_text_view"
                    app:layout_constraintVertical_bias="0.9"
                    tools:text="@string/balance_available" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/phone_number_linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_balance_linear">

                <TextView
                    android:id="@+id/phone_number_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/phone_number_text"
                    android:fontFamily="@font/open_sans_regular"
                    android:textColor="@color/deep_gold"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/details_email_text_view" />

                <TextView
                    android:id="@+id/phone_number_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_email_text_view"
                    app:layout_constraintVertical_bias="0.9"
                    tools:text="@string/mobile_number" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/swift_code_linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_number_linear">

                <TextView
                    android:id="@+id/sort_code_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/sort_code_text"
                    android:textColor="@color/deep_gold"
                    android:textSize="20sp"
                    android:fontFamily="@font/open_sans_regular"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/details_email_text_view" />

                <TextView
                    android:id="@+id/swift_code_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_email_text_view"
                    app:layout_constraintVertical_bias="0.9"
                    tools:text="@string/swift_code" />

            </LinearLayout>

            <Button
                android:id="@+id/transfer_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:backgroundTint="@color/light_gold"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/transfer_money"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/swift_code_linear" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>




</layout>



