<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="transactionRecord"
            type="com.example.tsfbankapp.model.TransactionRecord" />

        <variable
            name="clicklistener"
            type="com.example.tsfbankapp.adapters.TransactionRecordClickListener" />

    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/transaction_record_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="@{()->clicklistener.onClick(transactionRecord)}"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@{transactionRecord.status ?  @color/deep_gold : @color/red }">

            <LinearLayout
                android:id="@+id/from_linear_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal"
                android:weightSum="4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans_regular"
                    android:padding="8dp"
                    android:text="@string/from"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/sender_customer_name_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:padding="8dp"
                    android:text="@{transactionRecord.senderCustomerName}"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:text="Ighedosa Favour" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/to_linear_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal"
                android:weightSum="4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/from_linear_layout">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans_regular"
                    android:padding="8dp"
                    android:text="@string/to"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/to_customer_name_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:padding="8dp"
                    android:text="@{transactionRecord.receiverCustomerName}"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:text="Kolawole Matthew" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/transfer_amount_linear_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal"
                android:weightSum="4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/to_linear_layout">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans_regular"
                    android:padding="8dp"
                    android:text="@string/amount"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/transfer_amount_record_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:padding="8dp"
                    android:text="@{Integer.toString(transactionRecord.transferredAmount)}"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:text="10,000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/transfer_status_linear_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal"
                android:weightSum="4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/transfer_amount_linear_layout">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans_regular"
                    android:padding="8dp"
                    android:text="@string/status"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/transfer_status_record_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:padding="8dp"
                    android:text="@{transactionRecord.status ? @string/success : @string/failure}"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:text="status" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>