<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="customerViewmodel"
            type="com.example.tsfbankapp.viewmodels.SuccessfulTransactionViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".fragment.SuccessfulTransactionFragment">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/open_sans_regular"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/transaction_successful"
                android:textColor="@color/light_gold"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sender_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title">

                <TextView
                    android:id="@+id/title_sender_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/open_sans_regular"
                    android:padding="4dp"
                    android:text="@string/sender_info"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/name_linear_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_sender_info">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/open_sans_regular"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:text="@string/name"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sender_customer_name_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:padding="8dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:text="@{customerViewmodel.senderCustomer.customerName}"
                        android:textSize="18sp"
                        tools:text="Ighedosa Favour" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/account_number_linear_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/name_linear_layout">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:fontFamily="@font/open_sans_regular"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:text="@string/account_number"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sender_account_number_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:padding="8dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:text="@{customerViewmodel.senderCustomer.customerAccountNumber}"
                        android:textSize="18sp"
                        tools:text="2117090659" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/account_balance_linear_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/account_number_linear_layout">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:fontFamily="@font/open_sans_regular"
                        android:padding="8dp"
                        android:text="@string/balance_text"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sender_account_balance_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:padding="8dp"
                        android:text="@{Integer.toString(customerViewmodel.senderCustomer.accountBalance)}"
                        android:textColor="@color/deep_gold"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="50,000" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/receiver_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sender_info">

                <TextView
                    android:id="@+id/title_receiver_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="@font/open_sans_regular"
                    android:padding="4dp"
                    android:text="@string/receiver_info"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/receiver_name_linear_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_receiver_info">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/open_sans_regular"
                        android:padding="8dp"
                        android:text="@string/name"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/receiver_customer_name_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:padding="8dp"
                        android:text="@{customerViewmodel.receiverCustomer.customerName}"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="@string/kolawole_matthew" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/receiver_account_number_linear_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/receiver_name_linear_layout">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:fontFamily="@font/open_sans_regular"
                        android:padding="8dp"
                        android:text="@string/account_number"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/receiver_account_number_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="@{customerViewmodel.receiverCustomer.customerAccountNumber}"
                        android:textSize="18sp"
                        tools:text="4444 5555 999" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/receiver_account_balance_linear_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/receiver_account_number_linear_layout">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:fontFamily="@font/open_sans_regular"
                        android:padding="8dp"
                        android:text="@string/balance_text"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/receiver_account_balance_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:padding="8dp"
                        android:text="@{Integer.toString(customerViewmodel.receiverCustomer.accountBalance)}"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="60,654.00" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/amount_linear_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/receiver_account_balance_linear_layout">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:fontFamily="@font/open_sans_regular"
                        android:padding="8dp"
                        android:text="@string/transferred_amount"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/transferred_amount_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:padding="8dp"
                        android:textColor="@color/deep_gold"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="6,000" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>